tests/neg/i2533.scala
object Foo {
  def test(f: { type A = A }): Int = ??? // error
}
